# tensorflow

./: .bazelrc
tensorflow/compiler/mlir/lite/: BUILD  flatbuffer_export.cc  tf_tfl_passes.cc
tensorflow/compiler/mlir/lite/ir/: tfl_ops.cc  tfl_ops.td
tensorflow/compiler/mlir/lite/schema/: schema.fbs  schema_generated.h
tensorflow/compiler/mlir/lite/tests/: const-fold.mlir
tensorflow/compiler/mlir/lite/transforms/: optimize_pass.cc  optimize_patterns.td  pass.h
tensorflow/compiler/mlir/lite/utils/: utils.h  utils.td
tensorflow/core/tfrt/fallback/: fallback_state.cc  fallback_state.h  fallback_state_test.cc
tensorflow/lite/: CMakeLists.txt  builtin_ops.h
tensorflow/lite/cmake/: DownloadPThreadPool.cmake
tensorflow/lite/core/api/: flatbuffer_conversions.cc
tensorflow/lite/core/kernels/: builtin_op_kernels.h
tensorflow/lite/delegates/xnnpack/: file_util.cc  file_util.h  weight_cache.cc  weight_cache.h  xnnpack_delegate.cc
tensorflow/lite/kernels/: CMakeLists.txt  builtin_ops_list.inc
tensorflow/lite/python/: BUILD
tensorflow/lite/tools/cmake/: tensorflow-liteConfig.cmake.in
tensorflow/lite/tools/cmake/modules/: Findre2.cmake  abseil-cpp.cmake  (+4 more)
tensorflow/lite/tools/cmake/native_tools/protobuf/: CMakeLists.txt
tensorflow/lite/tools/evaluation/: utils.cc
tensorflow/lite/tools/pip_package/: build_pip_package_with_cmake.sh
tensorflow/lite/tools/serialization/: option_writer_generator.cc
tensorflow/lite/tools/versioning/: gpu_compatibility.cc  runtime_version.cc
tensorflow/tools/toolchains/remote_config/: configs.bzl  rbe_config.bzl
(+8 files in other folders)
